docs/manual/website/versioned_docs/version-0.2.0/features-discovery.md
---
id: version-0.2.0-features-discovery
title: Agent Discovery
sidebar_label: Agent Discovery
original_id: features-discovery
---

Agent discovery helps automation and reduces management overhead
(it may even help standardise your setup).

Agent discovery follows the principle of single source of truth: nodes are looked up in
provisioning systems or other forms of inventory solutions.

Administrators only have to manage one list of nodes and replicante can use that information.
Combine this with infrastructure as a service and you automatically get datastore monitoring
and automation as soon as a new instance is created.


## Backends
Replicante supports a variety of way to discover agents from different systems.
These are agent discovery *backends*.

Each backend has a set of [configuration](admin-config.md) options detailed below,
all set under the `discovery.backends` section.


### File backend
The file backend periodically reads clusters out of YAML files.

These files can be statically generated for clusters that rarely change or they can be
programmatically generated by many different software.

The list of files to (periodically) read is set in the `discovery.backends.files` configuration option.

The content of the file is a list of objects as follows:

  * `cluster`: The name of the cluster being discovered.
  * `nodes`: A list of addresses pointing to agents, one for each node in the cluster.

```yaml
# Example of two MongoDB replica sets
- cluster: cluster01
  nodes:
    - 'http://node1.example.com:37017'
    - 'http://node2.example.com:37017'
    - 'http://node3.example.com:37017'

- cluster: cluster02
  nodes:
    - 'http://node4.example.com:37017'
    - 'http://node5.example.com:37017'
    - 'http://node6.example.com:37017'
```


## Interval
Replicante periodically scans configured backends to detect changes to the set of agents
that should be monitored.

The `discovery.interval` option sets the delay, in seconds, between each scan.
